# auth-rs

./: CHANGELOG.md  Cargo.toml  README.md
example/: Cargo.toml
example/src/: main.rs
src/: authenticator.rs  config.rs  lib.rs  status.rs  userpass.rs
src/dummy/: mod.rs
