[package]
name = "rocket-simpleauth"
version = "0.4.0"
authors = ["Bram Vandenbogaerde"]
include = [
    "**/*.rs",
    "Cargo.toml",
]
description="Simple username/password authentication system for Rocket"
license="LGPL-3.0"
homepage="https://github.com/bramvdbogaerde/auth-rs"
repository="https://github.com/bramvdbogaerde/auth-rs"

[dependencies]
rocket = "0.3.5"
